# frtr

./: .gitignore  README.md  frtr_0001_quarterly-summary.xlsx  frtr_0002_ops-inventory.xlsx  frtr_0003_consolidation.xlsx  frtr_0004_payroll-summary.xlsx  frtr_0005_ap-vendor-spend.xlsx  frtr_0006_manufacturing-ops.xlsx  frtr_0007_ecommerce-metrics.xlsx  frtr_0008_cashflow-consolidation.xlsx  frtr_0009_healthcare-claims.xlsx  frtr_0010_energy-production.xlsx  frtr_0011_gov-grants-tracking.xlsx  frtr_0012_nonprofit-donations.xlsx  frtr_0013_education-outcomes.xlsx  frtr_0014_retail-pos.xlsx  frtr_0015_telecom-churn.xlsx  frtr_0016_airline-ops.xlsx  frtr_0017_realestate-portfolio.xlsx  frtr_0018_hospitality-bookings.xlsx  frtr_0019_agriculture-yield.xlsx  frtr_0020_pharma-trials.xlsx  frtr_0021_insurance-claims.xlsx  frtr_0022_logistics-routing.xlsx  frtr_0023_media-streaming.xlsx  frtr_0024_cybersecurity-incidents.xlsx  frtr_0025_construction-controls.xlsx  frtr_0026_consolidation-multi-subsidiary.xlsx  frtr_0029_customer-analytics.xlsx  frtr_0030_capex-project-portfolio.xlsx  pyproject.toml
src/frtr/: __init__.py  __main__.py  config.py  evaluator.py  indexer.py  prompt_template.py  reasoner.py  retriever.py  run_benchmark.py  sandbox.py  vectordb.py
src/frtr/embeddings/: __init__.py  base.py  bedrock_embedder.py  clip_embedder.py  openai_embedder.py
